force-app/main/default/objects/Qbo_DataSync_Options__mdt/Qbo_DataSync_Options__mdt.object-meta.xml
<CustomObject>
    <description>Metadata containing options for syncing data from SF to QB</description>
    <label>Qbo DataSync Options</label>
    <pluralLabel>Qbo DataSync Options</pluralLabel>
</CustomObject>