force-app/main/default/objects/Qbo_DataSync_Options__mdt/fields/Qbo_Entity__c.field-meta.xml
<CustomField>
    <fullName>Qbo_Entity__c</fullName>
    <description>The qbo entity of interest</description>
    <label>Qbo Entity</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>