force-app/main/default/objects/Qbo_DataSync_Options__mdt/fields/Sobject_Type__c.field-meta.xml
<CustomField>
    <fullName>Sobject_Type__c</fullName>
    <description>The Sobject type for which this event gets transformed</description>
    <label>Sobject Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>