force-app/main/default/objects/Qbo_DataSync_Options__mdt/fields/Subscribe_To_Create_Event__c.field-meta.xml
<CustomField>
    <fullName>Subscribe_To_Create_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Permits actions after we receive a create event fromm qbo</description>
    <label>Subscribe To Create Event</label>
    <type>Checkbox</type>
</CustomField>