force-app/main/default/objects/Qbo_DataSync_Options__mdt/fields/Subscribe_To_Delete_Event__c.field-meta.xml
<CustomField>
    <fullName>Subscribe_To_Delete_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Permits Delete actions after event is received from Qbo</description>
    <label>Subscribe To Delete Event</label>
    <type>Checkbox</type>
</CustomField>