force-app/main/default/objects/Qbo_DataSync_Options__mdt/fields/Subscribe_To_Update_Event__c.field-meta.xml
<CustomField>
    <fullName>Subscribe_To_Update_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Permit update actions</description>
    <label>Subscribe To Update Event</label>
    <type>Checkbox</type>
</CustomField>